<?xml version="1.0"?>
<package format="3">
  <name>ars548_driver_py</name>
  <version>0.1.0</version>
  <description>Python implementation of the ARS548 radar driver.</description>
  <maintainer email="example@example.com">maintainer</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ars548_messages</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
